--- a/summative/API/requirements.txt
+++ b/summative/API/requirements.txt
@@ -1,6 +1,88 @@
-fastapi
-uvicorn
-joblib
-scikit-learn
-numpy
-pydantic
+annotated-types==0.7.0
+anyio==4.8.0
+asttokens==3.0.0
+bcrypt==4.1.3
+blinker==1.7.0
+certifi==2023.7.22
+cffi==1.16.0
+chardet==3.0.4
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+debugpy==1.8.12
+decorator==5.1.1
+Deprecated==1.2.14
+dnspython==2.6.1
+email_validator==2.2.0
+executing==2.2.0
+fastapi==0.115.11
+fonttools==4.55.3
+greenlet==3.0.3
+gunicorn==23.0.0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.9.1
+hyperframe==5.2.0
+idna==2.10
+invoke==2.2.0
+ipykernel==6.29.5
+ipython==8.32.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.1.2
+jedi==0.19.2
+Jinja2==3.1.3
+joblib==1.4.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+Mako==1.3.6
+MarkupSafe==2.1.4
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==2.2.1
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pillow==11.1.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+psutil==6.1.1
+psycopg2-binary==2.9.9
+pure_eval==0.2.3
+pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+Pygments==2.19.1
+PyNaCl==1.5.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.20
+pytz==2024.2
+pyzmq==26.2.1
+requests==2.31.0
+rfc3986==1.5.0
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+six==1.17.0
+sniffio==1.3.0
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+starlette==0.41.3
+threadpoolctl==3.6.0
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.1
+uvicorn==0.34.0
+wcwidth==0.2.13
+Werkzeug==3.0.1
+wrapt==1.16.0
+WTForms==3.1.2
